# src/controllers/index.ts
@@ -2,3 +2,4 @@ export * as authController from "./auth/auth"
 export * as userController from "./user/user"
 export * as subjectController from "./subject/subject"
 export * as classesController from "./classes/classes"
+export * as questionController from "./question/question"
