# src/controllers/question/question.ts
@@ -1,0 +1,125 @@
+import { apiResponse } from "../../utils";
+import { questionModel } from "../../database";
+import { reqInfo, responseMessage } from "../../helper";
+import { addQuestionSchema, deleteQuestionSchema, editQuestionSchema, getQuestionSchema } from "../../validation";
+
+
+const ObjectId: any = require('mongoose').Types.ObjectId;
+
+export const add_question = async (req, res) => {
+    reqInfo(req);
+    let { user } = req.headers
+    try {
+        const { error, value } = addQuestionSchema.validate(req.body);
+        if (error) {
+            return res.status(501).json(new apiResponse(501, error?.details[0]?.message, {}, {}));
+        }
+
+        value.createdBy = new ObjectId(user?._id)
+        value.updatedBy = new ObjectId(user?._id)
+
+        const response = await new questionModel(value).save();
+        if (!response) return res.status(404).json(new apiResponse(404, responseMessage?.addDataError, {}, {}));
+        return res.status(200).json(new apiResponse(200, responseMessage?.addDataSuccess("question"), response, {}));
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
+
+export const edit_question_by_id = async (req, res) => {
+    reqInfo(req);
+    let { user } = req.headers;
+    try {
+        const { error, value } = editQuestionSchema.validate(req.body);
+        if (error) {
+            return res.status(501).json(new apiResponse(501, error?.details[0]?.message, {}, {}));
+        }
+        value.updatedBy = new ObjectId(user?._id)
+        const response = await questionModel.findOneAndUpdate({ _id: new ObjectId(value._id), isDeleted: false }, value, { new: true });
+        if (!response) return res.status(404).json(new apiResponse(404, responseMessage?.updateDataError("question"), {}, {}));
+        return res.status(200).json(new apiResponse(200, responseMessage?.updateDataSuccess("question"), response, {}));
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
+
+export const delete_question_by_id = async (req, res) => {
+    reqInfo(req);
+    try {
+        const { error, value } = deleteQuestionSchema.validate(req.params);
+        if (error) {
+            return res.status(501).json(new apiResponse(501, error?.details[0]?.message, {}, {}));
+        }
+        const response = await questionModel.findOneAndUpdate({ _id: new ObjectId(value.id), isDeleted: false }, { isDeleted: true }, { new: true });
+        if (!response) return res.status(404).json(new apiResponse(404, responseMessage?.getDataNotFound("question"), {}, {}));
+        return res.status(200).json(new apiResponse(200, responseMessage?.deleteDataSuccess("question"), {}, {}));
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
+
+export const get_all_questions = async (req, res) => {
+    reqInfo(req);
+    const { page, limit, search } = req.body;
+    let response: any, match: any = {};
+
+    try {
+        match.isDeleted = false;
+
+        if (search) {
+            match.$or = [
+                { firstName: { $regex: search, $options: 'i' } },
+                { lastName: { $regex: search, $options: 'i' } },
+                { email: { $regex: search, $options: 'i' } },
+                { "contact.mobile": { $regex: search, $options: 'i' } }
+            ]
+        }
+
+        response = await questionModel.aggregate([
+            { $match: match },
+            {
+                $facet: {
+                    data: [
+                        { $sort: { createdAt: -1 } },
+                        { $skip: (page - 1) * limit },
+                        { $limit: limit }
+                    ],
+                    data_count: [{ $count: "count" }]
+                }
+            }
+        ])
+
+        return res.status(200).json(new apiResponse(200, responseMessage?.getDataSuccess("questions"), {
+            question_data: response[0]?.data || [],
+            totalData: response[0]?.data_count[0]?.count || 0,
+            state: {
+                page: page,
+                limit: limit,
+                page_limit: Math.ceil(response[0]?.data_count[0]?.count / limit) || 1,
+            },
+        }, {}))
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
+
+export const get_question_by_id = async (req, res) => {
+    reqInfo(req);
+    try {
+        const { error, value } = getQuestionSchema.validate(req.params);
+        if (error) {
+            return res.status(501).json(new apiResponse(501, error?.details[0]?.message, {}, {}));
+        }
+
+        const response = await questionModel.findOne({ _id: new ObjectId(value.id), isDeleted: false });
+        if (!response) return res.status(404).json(new apiResponse(404, responseMessage?.getDataNotFound("question"), {}, {}));
+        return res.status(200).json(new apiResponse(200, responseMessage?.getDataSuccess("question"), response, {}));
+    } catch (error) {
+        console.log(error);
+        return res.status(500).json(new apiResponse(500, responseMessage?.internalServerError, {}, error));
+    }
+};
