# src/database/models/index.ts
@@ -1,3 +1,4 @@
 export * from "./user"
 export * from "./subject"
 export * from "./classes"
+export * from "./question"
