# src/validation/index.ts
@@ -2,3 +2,4 @@ export * from './auth'
 export * from './user'
 export * from './subject'
 export * from './classes'
+export * from './question'
